--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -1,5 +1,16 @@
+on early-fs
+    start setup-decrypt
+
 # separate copy needed to use /sbin/linker64 instead of /system/bin/linker64
 service sbinqseecomd /sbin/qseecomd
+    oneshot
+    disabled
+    user root
+    group root
+    seclabel u:r:recovery:s0
+
+# use decryption libraries from /system if available
+service setup-decrypt /sbin/setup_decrypt
     oneshot
     disabled
     user root
